--- a/envProject/envApp/templates/envApp/layout.html
+++ b/envProject/envApp/templates/envApp/layout.html
@@ -32,18 +32,33 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">  <!-- Create a fixed-top navbar with Bootstrap classes -->
-        <a class="navbar-brand" href="{% url 'home' %}">Inventory App</a>  <!-- Link the brand name to the home page using Django's URL tag -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>  <!-- Button to toggle the navbar on smaller screens -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <a class="navbar-brand" href="{% url 'home' %}">Inventory App</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">  <!-- Collapsible navbar content -->
-            <ul class="navbar-nav">  <!-- Navbar items container -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <!-- Left side navigation items -->
+            <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'product_create' %}">Add Product</a>  <!-- Link to the product creation page -->
+                    <a class="nav-link" href="{% url 'product_create' %}">Add Product</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'product_list' %}">Show Products</a>  <!-- Link to the product listing page -->
+                    <a class="nav-link" href="{% url 'product_list' %}">Show Products</a>
+                </li>
+            </ul>
+            
+            <!-- Right side logout button -->
+            <ul class="navbar-nav ms-auto">
+            
+                <li class="nav-item ">
+                    <form action="{% url 'logout' %}" method="POST" class="d-inline">
+                        {% csrf_token %}
+                        <button class="btn btn-danger" type="submit">Logout</button>
+                    </form>
+                </li>
+                    <li class="nav-item">
+                    <p class="text-white padding-4">Welcome, {{request.user.username}}!</p>
                 </li>
             </ul>
         </div>
